tests/ui/offload/non_tuple_args.stderr
error[E0277]: `{integer}` is not a tuple
  --> $DIR/non_tuple_args.rs:7:36
   |
LL |     core::intrinsics::offload::<_, _, ()>(kernel_0, [1, 1, 1], [1, 1, 1], 0, 42);
   |                                    ^ the nightly-only, unstable trait `std::marker::Tuple` is not implemented for `{integer}`
   |
note: required by a bound in `offload`
  --> $SRC_DIR/core/src/intrinsics/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
